[gd_scene load_steps=19 format=2]

[ext_resource path="res://enemies/Slime.gd" type="Script" id=1]
[ext_resource path="res://shadow2.png" type="Texture" id=2]
[ext_resource path="res://enemies/0.png" type="Texture" id=3]
[ext_resource path="res://enemies/walk1.png" type="Texture" id=4]
[ext_resource path="res://enemies/1.png" type="Texture" id=5]
[ext_resource path="res://enemies/walk2.png" type="Texture" id=6]
[ext_resource path="res://enemies/3.png" type="Texture" id=7]
[ext_resource path="res://enemies/2.png" type="Texture" id=8]
[ext_resource path="res://enemies/4.png" type="Texture" id=9]
[ext_resource path="res://enemies/SlimeHit.wav" type="AudioStream" id=10]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 28.6187

[sub_resource type="Curve" id=2]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]

flags = 4
width = 2048
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 15, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.0
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 50.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.6
scale_random = 0.0
scale_curve = SubResource( 3 )
color = Color( 0.628906, 0.12529, 0.12529, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": false,
"name": "jump",
"speed": 6.0
} ]

[sub_resource type="Curve" id=6]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.493438, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]

flags = 4
width = 2048
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 160.0
initial_velocity_random = 1.0
angular_velocity = 50.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 100.0
damping_random = 1.0
angle = 150.0
angle_random = 1.0
scale = 0.2
scale_random = 0.0
scale_curve = SubResource( 7 )
color = Color( 0.964844, 0, 0, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Initial Velocity", "Scale" ]

[node name="Slime" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="." index="0"]

scale = Vector2( 0.9, 1 )
texture = ExtResource( 2 )
offset = Vector2( 0, 12 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="flesh" type="Particles2D" parent="." index="2"]

emitting = false
amount = 24
lifetime = 1.0
one_shot = true
preprocess = 0.0
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 4 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="3"]

frames = SubResource( 5 )
animation = "default"
frame = 1
playing = true
offset = Vector2( 0, -13 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="blood" type="Particles2D" parent="." index="4"]

emitting = false
amount = 32
lifetime = 1.2
one_shot = true
preprocess = 0.0
speed_scale = 2.0
explosiveness = 1.0
randomness = 1.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 8 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time" ]

[node name="JumpTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = true

[node name="DeathTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.3
one_shot = true
autostart = false

[node name="Hit" type="AudioStreamPlayer2D" parent="." index="7"]

stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="body_entered" from="." to="." method="_on_Slime_body_entered"]

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]


